--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.9
 discord==1.7.3
+discord-py-slash-command==3.0.1
 discord.py==1.7.3
 google-auth==2.3.3
 google-auth-oauthlib==0.4.6
